@@ -14,6 +14,7 @@ Version 1.5.8+svn:
   * User interface
     * Disable the "Network Player" option when playing a non-networked MP
       game.
+    * Dialogs with an input text are converted to the new dialogs.
 
 Version 1.5.8:
   * Campaigns
